[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/SessionScene.gd" type="Script" id=1]
[ext_resource path="res://Font/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Font/Roboto-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Font/Roboto-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Font/Roboto-BlackItalic.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 26
outline_size = 1
font_data = ExtResource( 4 )

[node name="SessionScene" type="Node2D"]
script = ExtResource( 1 )

[node name="ScreenPanel" type="Panel" parent="."]
margin_right = 480.0
margin_bottom = 720.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenMargCont" type="MarginContainer" parent="ScreenPanel"]
margin_right = 480.0
margin_bottom = 720.0
custom_constants/margin_right = 15
custom_constants/margin_top = 25
custom_constants/margin_left = 15
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentVBox" type="VBoxContainer" parent="ScreenPanel/ScreenMargCont"]
margin_left = 15.0
margin_top = 25.0
margin_right = 465.0
margin_bottom = 695.0

[node name="HeaderHBox" type="HBoxContainer" parent="ScreenPanel/ScreenMargCont/ContentVBox"]
margin_right = 450.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.11

[node name="SessionTitle" type="RichTextLabel" parent="ScreenPanel/ScreenMargCont/ContentVBox/HeaderHBox"]
margin_right = 255.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.1
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "SetName"
text = "SetName"

[node name="Mode&ToolContainer" type="VBoxContainer" parent="ScreenPanel/ScreenMargCont/ContentVBox/HeaderHBox"]
margin_left = 259.0
margin_right = 449.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="SessionMode" type="RichTextLabel" parent="ScreenPanel/ScreenMargCont/ContentVBox/HeaderHBox/Mode&ToolContainer"]
margin_right = 190.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[right]MeasureMode[/right]"
text = "MeasureMode"

[node name="IntValMargin" type="MarginContainer" parent="ScreenPanel/ScreenMargCont/ContentVBox/HeaderHBox/Mode&ToolContainer"]
margin_top = 32.0
margin_right = 190.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
custom_constants/margin_right = 30
custom_constants/margin_left = 30

[node name="IntValHBox" type="HBoxContainer" parent="ScreenPanel/ScreenMargCont/ContentVBox/HeaderHBox/Mode&ToolContainer/IntValMargin"]
margin_left = 30.0
margin_right = 160.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="IntValSubButton" type="Button" parent="ScreenPanel/ScreenMargCont/ContentVBox/HeaderHBox/Mode&ToolContainer/IntValMargin/IntValHBox"]
margin_right = 30.0
margin_bottom = 38.0
text = " -"

[node name="IntValLabel" type="RichTextLabel" parent="ScreenPanel/ScreenMargCont/ContentVBox/HeaderHBox/Mode&ToolContainer/IntValMargin/IntValHBox"]
margin_left = 34.0
margin_right = 94.0
margin_bottom = 38.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"

[node name="IntValAddButton" type="Button" parent="ScreenPanel/ScreenMargCont/ContentVBox/HeaderHBox/Mode&ToolContainer/IntValMargin/IntValHBox"]
margin_left = 98.0
margin_right = 130.0
margin_bottom = 38.0
text = " +"

[node name="HSeparator" type="HSeparator" parent="ScreenPanel/ScreenMargCont/ContentVBox"]
margin_top = 74.0
margin_right = 450.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="ItemScrollContainer" type="ScrollContainer" parent="ScreenPanel/ScreenMargCont/ContentVBox"]
margin_top = 82.0
margin_right = 450.0
margin_bottom = 594.0
rect_min_size = Vector2( 0, 450 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenPanel/ScreenMargCont/ContentVBox/ItemScrollContainer"]
margin_right = 350.0
margin_bottom = 40.0
rect_min_size = Vector2( 350, 40 )
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="ScreenPanel/ScreenMargCont/ContentVBox"]
margin_top = 598.0
margin_right = 450.0
margin_bottom = 602.0
size_flags_stretch_ratio = 0.1

[node name="ConfCancMargin" type="MarginContainer" parent="ScreenPanel/ScreenMargCont/ContentVBox"]
margin_top = 606.0
margin_right = 450.0
margin_bottom = 670.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
custom_constants/margin_top = 20

[node name="ConfirmCancelHBox" type="HBoxContainer" parent="ScreenPanel/ScreenMargCont/ContentVBox/ConfCancMargin"]
margin_top = 20.0
margin_right = 450.0
margin_bottom = 64.0
alignment = 1

[node name="ConfirmButton" type="Button" parent="ScreenPanel/ScreenMargCont/ContentVBox/ConfCancMargin/ConfirmCancelHBox"]
margin_left = 123.0
margin_right = 230.0
margin_bottom = 38.0
size_flags_vertical = 0
text = "Confirm"

[node name="CancelButton" type="Button" parent="ScreenPanel/ScreenMargCont/ContentVBox/ConfCancMargin/ConfirmCancelHBox"]
margin_left = 234.0
margin_right = 327.0
margin_bottom = 38.0
size_flags_vertical = 0
text = "Cancel"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0

[connection signal="pressed" from="ScreenPanel/ScreenMargCont/ContentVBox/HeaderHBox/Mode&ToolContainer/IntValMargin/IntValHBox/IntValSubButton" to="." method="_on_IntValSubButton_pressed"]
[connection signal="pressed" from="ScreenPanel/ScreenMargCont/ContentVBox/HeaderHBox/Mode&ToolContainer/IntValMargin/IntValHBox/IntValAddButton" to="." method="_on_IntValAddButton_pressed"]
[connection signal="pressed" from="ScreenPanel/ScreenMargCont/ContentVBox/ConfCancMargin/ConfirmCancelHBox/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="ScreenPanel/ScreenMargCont/ContentVBox/ConfCancMargin/ConfirmCancelHBox/CancelButton" to="." method="_on_CancelButton_pressed"]
